example/nginx-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx.minikube.local
  namespace: default
spec:
  rules:
    - host: nginx.minikube.local
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
